Tidy up a truncated cell.

--- a/embeddings-experiment.ipynb
+++ b/embeddings-experiment.ipynb
@@ -1140,7 +1140,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "It seems that every word e"
+    "It seems that every word every embedding system has its own ideas about what words are similar to each other. There's no consistency."
    ]
   }
  ],
